--- a/libft/Makefile
+++ b/libft/Makefile
@@ -29,15 +29,15 @@ SRC =	ft_bzero.c\
 all: $(NAME)
 
 %.o: %.c
-	$(CC) $(CFLAGS) -c $< -o $@ -I $(HFILE)
+	@$(CC) $(CFLAGS) -c $< -o $@ -I $(HFILE)
 
 $(NAME): $(OBJS)
-	$(CCAR) $(NAME) $(OBJS)
+	@$(CCAR) $(NAME) $(OBJS)
 
 clean:
-	rm -f $(OBJS)
+	@rm -f $(OBJS)
 
 fclean: clean
-	rm -f $(NAME)
+	@rm -f $(NAME)
 
 re: fclean all
